bgimage position fixed on mobile

--- a/frontend/css/general.css
+++ b/frontend/css/general.css
@@ -91,12 +91,11 @@ h5 {        /* the titles of the statistics tables */
 }
 
     #background_image {
-        position: absolute;
+        position: fixed;                /* positioned relative to the viewport */
         width: 100%;
         height: 100%;
         background-size: auto 150%;
         background-repeat: no-repeat;
-        pointer-events: none; /* Make it ignore mouse events */
         z-index: -1;
         background-color: #E9EBF8;
     }
@@ -111,7 +110,7 @@ h5 {        /* the titles of the statistics tables */
     #menu_bar {
         height: var(--menu-bar-height);
         width: 100%;
-        text-align:center;
+        text-align: center;
         overflow: hidden;
         position: fixed;
         top: 0; /* Position the navbar at the top of the page */
@@ -175,7 +174,7 @@ h5 {        /* the titles of the statistics tables */
     
     #background_image {
         background-color: #A1B0C6;
-        position: fixed;
+        background-size: auto calc(12*var(--menu-bar-height));
     }
 
 }
